[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ntf-zbx"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Denis Irz", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/ntf-zbx#readme"
Issues = "https://github.com/unknown/ntf-zbx/issues"
Source = "https://github.com/unknown/ntf-zbx"

[tool.hatch.version]
path = "src/ntf_zbx/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ntf_zbx tests}"

[tool.coverage.run]
source_pkgs = ["ntf_zbx", "tests"]
branch = true
parallel = true
omit = [
  "src/ntf_zbx/__about__.py",
]

[tool.coverage.paths]
ntf_zbx = ["src/ntf_zbx", "*/ntf-zbx/src/ntf_zbx"]
tests = ["tests", "*/ntf-zbx/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
